--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 backend.sonar.projectBaseDir=.
 backend.sonar.sources=src
-backend.sonar.exclusions=**/node_modules/**,**/*.spec.ts
+backend.sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/main.ts,**/*.controller.ts
 backend.sonar.tests=test
 backend.sonar.test.inclusions=**/*.spec.ts
 backend.sonar.typescript.lcov.reportPaths=./coverage/lcov.info
