--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sinon": "^13.0.2",
     "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.2.45"
   },
@@ -44,6 +45,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
+    "@types/sinon": "^10.0.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -54,7 +56,6 @@
     "jest": "^27.2.5",
     "joi": "^17.6.0",
     "prettier": "^2.3.2",
-    "sinon": "^13.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
@@ -76,8 +77,8 @@
     },
     "coverageDirectory": "./coverage",
     "testEnvironment": "node",
-    "moduleDirectories": [
-      "."
+    "modulePaths": [
+      "<rootDir>"
     ]
   }
 }
